{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "c6bfeca5-8f34-4fa1-aabc-ad43a8f74063",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "05013e7a-102c-4a7b-a30f-58391d5db179",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "bc688aff-f5f7-4d68-bab4-ebfeafaaab26",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackPhysical",
                    "type": "Button",
                    "id": "2d16dc14-e6ef-441f-b419-64fd0001442e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackMagic",
                    "type": "Button",
                    "id": "e6983fcd-6052-46b3-b90d-e9d18cba65d9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f848fad6-0a75-408b-8698-6a9b85024bfa",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56061fea-f69a-43eb-a358-1b808b1f2429",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd578ef2-6b5e-4ee3-82e9-7cb5cc781a7e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackPhysical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5dc51b6c-9864-4364-abf5-02071acca224",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackMagic",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}